# Sattern

./: .gitignore  README.md  pyproject.toml
sattern/: display_stock_data.py  get_stock_data.py  main.py  process_data.py  sattern.py
sattern/data/: AAPL_1mo_history_data.json  AAPL_1y_history_data.json  BABA_2y_history_data.json  ERJ_2y_history_data.json  MSFT_1y_history_data.json  MSFT_2y_history_data.json
sattern/src/: api.py  backtester.py  display.py  display_stock_data.py  get_stock_data.py  llm.py  main.py  process.py  process_data.py  sattern.py  trader.py
sattern/src/backtesting/: backtesting.py  display.py  load_data.py  tester.py
sattern/src/backtesting_results/: commodities.json
sattern/src/data/: BA_2y_history_data.json  CELH_2y_history_data.json  ERJ_1y_history_data.json  ERJ_test.json  INTC_2y_history_data.json  TSLA_2y_history_data.json
sattern/src/metrics/: combine.py  process.py  sattern.py
sattern/src/tools/: api.py  backtester.py  display.py  llm.py  trader.py  weekday.py
src/: main.py
src/backtesting/: backtesting.py
src/data/: AAPL_1mo_history_data.json  BA_2y_history_data.json  GOOG_2y_history_data.json  NVDA_2y_history_data.json  TSM_2y_history_data.json
