[tool.poetry]
name = "sattern"
version = "0.1.0"
description = ""
authors = ["sdstevenson <sdstevenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.50"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sattern = "sattern.src.main:main"
backtester = "sattern.src.backtester:main"
