[tool.poetry]
name = "sattern"
version = "0.1.0"
description = ""
authors = ["sdstevenson <sdstevenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
datetime = "^5.5"
openai = "^1.59.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sattern = "sattern.src.main:run_sattern"
trader = "sattern.src.main:main"
backtester = "sattern.src.backtester:main"
